--- a/index.html
+++ b/index.html
@@ -44,10 +44,19 @@
   <!-- STRETCH GOAL: ONLY ATTEMPT THIS WHEN YOU ARE FINISHED WITH THE MAIN OBJECTIVE -->
   <!-- CAROUSEL COMPONENT -->
   <div class="carousel-container">
+      <div class="carousel">
+          <div class="left-button"> < </div>
+          <img src="./assets/carousel/mountains.jpeg" />
+          <img src="./assets/carousel/computer.jpeg" />
+          <img src="./assets/carousel/trees.jpeg" />
+          <img src="./assets/carousel/turntable.jpeg" />
+          <div class="right-button"> > </div>
+        </div>
   </div>
 
   <!-- CARDS CONTAINER, PLACE ARTICLE CARDS HERE -->
   <div class="cards-container">
+      
   </div>
 
 </body>
